Added capstone 1 code

--- a/index.css
+++ b/index.css
@@ -354,6 +354,10 @@ iframe {
 		text-align: center;
 	}
 
+	.copyright-area p {
+		font-size: 14px;
+	}
+
 }
 
 @media screen and (max-width: 647px) {
@@ -394,6 +398,15 @@ iframe {
 		font-size: 30px;
 	}
 
+	.social-images {
+		width: 70px;
+		height: 70px;
+	}
+
+	.copyright-area p {
+		font-size: 10px;
+	}
+
 }
 
 @media screen and (max-width: 522px) {
@@ -416,4 +429,52 @@ iframe {
 
 }
 
+@media screen and (max-width: 499px) {
+	.intro h1 {
+		font-size: 35px;
+		line-height: 1.7;
+	}
+
+	.intro h2 {
+		font-size: 20px;
+	}
+
+	.service-description h2 {
+		font-size: 30px;
+	}
+
+	.contact-me p {
+		font-size: 15px;
+	}
+
+}
+
+@media screen and (max-width: 460px) {
+	.intro h1 {
+		font-size: 35px;
+		line-height: 1;
+	}
+
+	.intro h2 {
+		font-size: 20px;
+	}
+
+	.service-description h2 {
+		font-size: 30px;
+	}
+
+	.contact-me p {
+		font-size: 15px;
+	}
+
+	.title h2 {
+		font-size: 30px;
+	}
+
+	.social-images {
+		width: 50px;
+		height: 50px;
+	}
+
+}
 
